# SSE-Decoder

./: .gitignore  CMakeLists.txt  README.MD  decode.toml  grepSec-dev.sh  grepSec-test.sh  grepSecurity.sh  pyproject.toml  sync_to_sw.sh
3rd/: toml.hpp
py/: 01_pcap_recon.ipynb  analyse.cpp  analyse_config.hpp  build_notebook.py  csv.hpp  decode_head5.py  extract_payload.cpp  pyproject.toml  sse5803_lib.py  test.ipynb  validate_head5.py  verify95803.cpp
research/: 18-2201.md  23-7301.md  38-3802.md  38-3815.md  39-3901.md  4-2301.md  47-4701.md  48-4801.md  49-4901.md  50-5001.md  6-3113.md  6-3115.md  6-3202-ver2.md  6-3202.md  9-5803-ver2.md  9-5803.md  PLAN.md  REFACTOR_PLAN.md  STRUCT.md  USAGE.md  ver3-frame struct.md
src/: 47_4701_struct.hpp  6_3113_struct.hpp  9_5803_decode_engine.hpp  9_5803_struct.hpp  MPMCQueue.h  SPSCQueue.h  SsePipeline.hpp  SseStructs.hpp  bin_io.cpp  bin_io.hpp  capture_backend.hpp  capture_backends.cpp  config.hpp  decode_47_4701.cpp  decode_6_3113.cpp  decode_9_5803.cpp  decode_9_5803_live.cpp  efvi_backend.cpp  fast_utils.hpp  live.cpp  live.hpp  main.cpp  parser.py  pipeline.hpp  split_frames.cpp  thread_affinity.cpp  thread_affinity.hpp  ua3202.hpp  ua5803.hpp  utils.hpp  verify_9_5803.cpp
tools/efvidump/: main.cpp
